--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,33 +1,63 @@
+
 on:
   pull_request:
     branches: [ main ]
-  push:
-    branches: [ main ]
+  #push:
+  #  branches: [ main ]
 
 jobs:
   get_files:
     name: run_on_pr_or_push
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
-
-      - name: Modified files
+            fetch-depth: ${{ github.event_name == 'pull_request' && 2 || 0 }}
+      - name: Get changed files
+        id: changed-files
         run: |
-          case '${{ github.event_name }}' in
-            push)
-              firstCommit='${{ github.event.commits[0].id }}'
-              lastCommit='${{ github.event.commits[-1].id }}'
-              ;;
-            pull_request)
-              firstCommit='${{ github.event.base_ref }}'
-              lastCommit='${{ github.event.head_ref }}'
-              ;;
-          esac
-          changedFiles=$(git diff --name-only --diff-filter=d "${firstCommit}~1" "${lastCommit}")
-          echo "changedFiles: $changedFiles"
+            if ${{ github.event_name == 'pull_request' }}; then
+                echo "changed_files=$(git diff --name-only -r HEAD^1 HEAD | xargs)" >> $GITHUB_OUTPUT
+            else
+                echo "changed_files=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | xargs)" >> $GITHUB_OUTPUT
+            fi
+      - name: List changed files
+        run: |
+            for file in ${{ steps.changed-files.outputs.changed_files }}; do
+                echo "$file was changed"
+            done
+
+
+# on:
+#   pull_request:
+#     branches: [ main ]
+#   push:
+#     branches: [ main ]
+
+# jobs:
+#   get_files:
+#     name: run_on_pr_or_push
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           fetch-depth: 0
+
+#       - name: Modified files
+#         run: |
+#           case '${{ github.event_name }}' in
+#             push)
+#               firstCommit='${{ github.event.commits[0].id }}'
+#               lastCommit='${{ github.event.commits[-1].id }}'
+#               ;;
+#             pull_request)
+#               firstCommit='${{ github.event.base_ref }}'
+#               lastCommit='${{ github.event.head_ref }}'
+#               ;;
+#           esac
+#           changedFiles=$(git diff --name-only --diff-filter=d "${firstCommit}~1" "${lastCommit}")
+#           echo "changedFiles: $changedFiles"
 
 
 
