--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,8 +2,8 @@
 on:
   pull_request:
     branches: [ main ]
-  #push:
-  #  branches: [ main ]
+  push:
+    branches: [ main ]
 
 jobs:
   get_files:
