--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,6 +26,14 @@ jobs:
             for file in ${{ steps.changed-files.outputs.changed_files }}; do
                 echo "$file was changed"
             done
+      - name: Zip top-level folders with their contents
+        run: echo -e ${{ steps.changed-files.outputs.changed_files }} |
+          tr ' ' '\n' |
+          cut -d/ -f1 |
+          sort -u | 
+          egrep "^[^\.]" |
+          xargs -n1 -I % sh -c '[ -d % ] && echo "Zipping %..." && zip -r %.zip % || true'
+
 
 
 # on:
