--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,8 +33,12 @@ jobs:
         run: |
             # unzip to test folder (might need to create it?)
             7z x archive.zip -otest
-            ls -l test
-
+      - name: List files and folders
+        run: |
+            ls
+      - name: Check unzipped folder
+        run: |
+            cd test && ls
 
 
 # on:
