--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,12 +33,9 @@ jobs:
         run: |
             # unzip to test folder (might need to create it?)
             7z x archive.zip -otest
-      - name: List files and folders
-        run: |
             ls
-      - name: Check unzipped folder
-        run: |
-            cd test && ls
+            cd test
+            ls -la
 
 
 # on:
