--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -56,6 +56,10 @@ jobs:
     env:
       OUTPUT1: ${{needs.get_files.outputs.output1}}
     steps:
+      # As this is another job the previous checked out code is not present. In this case we have to check the codebase out again as we are on a clean runner
+      - uses: actions/checkout@v3
+        with:
+            fetch-depth: ${{ github.event_name == 'pull_request' && 2 || 0 }}
       - name: setup python
         uses: actions/setup-python@v5
         with:
