--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
           print(os.environ['OUTPUT1'])
           sys.exit()
       - name: Run script
-        run: python3 .github/scripts/test.py "${{ steps.changed-files.outputs.changed_files }}"
+        run: python3 .github/scripts/test.py -f "${{ steps.changed-files.outputs.changed_files }}"
 
 
 # on:
