--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,11 @@ jobs:
             ls -la
             # not for here but just checking tags in the repo
             git tag -l --sort=-version:refname "module1*"
+      - name: Run script
+        run: python3 .github/scripts/test.py -f $env:changed-files
+        env:
+            # wrapped in quotes to make sure it is passed as a space separated string to python
+            changed-files: "${{ steps.changed-files.outputs.changed_files }}"
   python-test:
     name: test_using_python
     runs-on: ubuntu-latest
@@ -76,8 +81,7 @@ jobs:
           print("Hello world!")
           print(os.environ['OUTPUT1'])
           sys.exit()
-      - name: Run script
-        run: python3 .github/scripts/test.py -f "${{ steps.changed-files.outputs.changed_files }}"
+
 
 
 # on:
