--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,8 @@ jobs:
             CHANGED_FILES: ${{ steps.changed-files.outputs.changed_files }}
         run: |
             echo ${{ steps.changed-files.outputs.changed_files }}
-            python3 .github/scripts/test.py -f $env:CHANGED_FILES
+            echo $env:CHANGED_FILES
+            python3 .github/scripts/test.py -f \"$env:CHANGED_FILES\"
   # python-test:
   #   name: test_using_python
   #   runs-on: ubuntu-latest
