--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,13 +50,12 @@ jobs:
             # not for here but just checking tags in the repo
             git tag -l --sort=-version:refname "module1*"
       - name: Run script
-        shell: bash
+        #shell: bash
         env:
-            # wrapped in quotes to make sure it is passed as a space separated string to python
+            
             CHANGED_FILES: ${{ steps.changed-files.outputs.changed_files }}
         run: |
-            echo ${{ steps.changed-files.outputs.changed_files }}
-            echo "$CHANGED_FILES"
+            # wrapped in quotes to make sure it is passed as a space separated string to python
             python3 .github/scripts/test.py -f "$CHANGED_FILES"
   # python-test:
   #   name: test_using_python
