--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,6 +69,7 @@ jobs:
         #           fetch-depth: 0
         run: |
             # Not well documented but GitVersion exposes all version variables as environment variables in the form GitVersion_<variable_name>
+            which gitversion
             gitversion /output buildserver
             echo "$GitVersion_MajorMinorPatch"
             echo $env:GitVersion_MajorMinorPatch
