--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,8 @@ jobs:
       - name: Determine Version
         id: version_step # step id used as reference for output values
         uses: gittools/actions/gitversion/execute@v3.2.0
-        with:
-          updateProjectFiles: true
+        #with:
+        #  updateProjectFiles: true
       # - name: Determine Version
       #   id: version_step # step id used as reference for output values
       #   uses: gittools/actions/gitversion/execute@v3.2.0
