--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,9 +51,9 @@ jobs:
             ls -la
             # not for here but just checking tags in the repo
             git tag -l --sort=-version:refname "module1*"
-      #- uses: actions/checkout@v4
-      #  with:
-      #      fetch-depth: 0  # testing!!!!!
+      - uses: actions/checkout@v4
+        with:
+            fetch-depth: 0  # testing!!!!!
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v3.2.0
         with:
