--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 
 on:
-  #pull_request:
-  #  branches: [ main ]
-  #  paths: 
-  #     - 'modules/**'
+  pull_request:
+    branches: [ main ]
+    paths: 
+       - 'modules/**'
   push:
     branches: [ main ]
     paths: 
@@ -23,14 +23,8 @@ jobs:
       - id: checkout-codebase
         uses: actions/checkout@v4
         with:
-            if ${{ github.event_name == 'pull_request' }}; then
-                  echo "fetch-depth-value=2"  >> $GITHUB_OUTPUT
-              else
-                  echo "fetch-depth-value=0" >> $GITHUB_OUTPUT
-              fi
-            # Note, if it returns a depth of 2 then it will not contain the full history. As such we repeat the checkout further down so that GitVersion has the full history to use..
-            fetch-depth: ${{ steps.checkout-codebase.outputs.fetch-depth-value }}
-            # fetch-depth: ${{ github.event_name == 'pull_request' && 2 || 0 }}
+            # Note, if a depth of 2 is used then we will need to checkout again with a depth of zero in a later step so that GitVersion has the full repo history to be able to create a semver version with..
+            fetch-depth: ${{ github.event_name == 'pull_request' && 2 || 0 }}
       - name: Get changed files
         id: changed-files
         run: |
@@ -57,8 +51,8 @@ jobs:
             ls -la
             # not for here but just checking tags in the repo
             git tag -l --sort=-version:refname "module1*"
-      - name: Get full repository history (required for GitVersion)
-        if: ${{ steps.checkout-codebase.outputs.fetch-depth-value != 0 }}
+      - name: Re-checkout repository to get the full history to allow GitVersion to work (fails if the depth is shallow as a pull request depth gives)
+        if: ${{ github.event_name == 'pull_request' }}
         uses: actions/checkout@v4
         with:
             fetch-depth: 0
