--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,20 @@ jobs:
             else
                 echo "changed_files=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | xargs)" >> $GITHUB_OUTPUT
             fi
+      - name: bash handle module files
+        id: bash-modules
+        run: |
+            modules=$(echo "${{ steps.changed-files.outputs.changed_files }}" | grep "^modules/" || true)
+            if [[ ! -z "$modules" ]]; then
+                modules=$(echo "$modules" | sed -e "s!modules/!!" | xargs -n1 dirname | uniq)
+            fi
+            echo "changed_modules=$modules"
       - name: List changed files
         run: |
             for file in ${{ steps.changed-files.outputs.changed_files }}; do
                 echo "$file was changed"
             done
+            echo "changed modules are: ${{ steps.bash-modules.outputs.changed_modules }}"
       - name: Zip top-level folders with their contents
         run: |
             echo ${{ steps.changed-files.outputs.changed_files }} | while read line ; do xargs zip archive.zip $line ; done
