--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,15 +106,17 @@ jobs:
             echo "GitVersion_MajorMinorPatch (env.GitVersion_MajorMinorPatch)  : ${{ env.GitVersion_MajorMinorPatch }}"
         name: Display GitVersion variables (without prefix)
 
-      - name: Run script2
-        run: |
-          cd modules/module1
+      # - name: Run script2
+      #   run: |
+      #     cd modules/module1
       - name: Determine Module Version
         id: version_module_step # step id used as reference for output values
         uses: gittools/actions/gitversion/execute@v3.2.0
-      - name: Run script3
-        run: |
-          cd ../../
+        with:
+            config_file: "modules/module1/GitVersion.yml"
+      # - name: Run script3
+      #   run: |
+      #     cd ../../
 
       - name: Module1 Version
         id: module1-version
