--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,7 +113,7 @@ jobs:
         id: version_module_step # step id used as reference for output values
         uses: gittools/actions/gitversion/execute@v3.2.0
         with:
-            config_file: "modules/module1/GitVersion.yml"
+            configFilePath: "modules/module1/GitVersion.yml"
       # - name: Run script3
       #   run: |
       #     cd ../../
