--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,8 @@ jobs:
       - name: Determine Version
         id: version_step # step id used as reference for output values
         uses: gittools/actions/gitversion/execute@v3.2.0
+        with:
+            configFilePath: "modules/module1/GitVersion.yml"
         #with:
         #  updateProjectFiles: true
       # - name: Determine Version
