--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,7 @@ jobs:
         id: version_step # step id used as reference for output values
         uses: gittools/actions/gitversion/execute@v3.2.0
         with:
+            useConfigFile: true
             configFilePath: "modules/module1/GitVersion.yml"
         #with:
         #  updateProjectFiles: true
