--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,7 +119,8 @@ jobs:
         id: version_module_step # step id used as reference for output values
         uses: gittools/actions/gitversion/execute@v3.2.0
         with:
-            configFilePath: "modules/module1/GitVersion.yml"
+            useConfigFile: true
+            configFilePath: "modules/module2/GitVersion.yml"
       # - name: Run script3
       #   run: |
       #     cd ../../
