--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,6 +75,9 @@ jobs:
         with:
             useConfigFile: true
             configFilePath: "modules/module1/GitVersion.yml"
+            overrideConfig: |
+              update-build-number=false
+              next-version=3.2.1
             #arguments: '/showConfig'
             #overrideConfig: |
             #  mode=MainLine
