--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
             useConfigFile: true
             configFilePath: "modules/module1/GitVersion.yml"
             overrideConfig: |
-              tag-prefix=test
+              tag-prefix=module1-
             #arguments: '/showConfig'
             #overrideConfig: |
             #  mode=MainLine
@@ -123,6 +123,8 @@ jobs:
         with:
             useConfigFile: true
             configFilePath: "modules/module2/GitVersion.yml"
+            overrideConfig: |
+              tag-prefix=module2-
       # - name: Run script3
       #   run: |
       #     cd ../../
