--- a/modules/module1/GitVersion.yml
+++ b/modules/module1/GitVersion.yml
@@ -1,5 +1,5 @@
 
 workflow: GitHubFlow/v1
 # pattern match to remove the prefix before checking for a semver tag
-tag-prefix: 'test'
+#tag-prefix: 'module1-'
 
