--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,10 +121,10 @@ jobs:
         id: version_module_step # step id used as reference for output values
         uses: gittools/actions/gitversion/execute@v3.2.1
         with:
-            useConfigFile: true
+            useConfigFile: 'true'
             configFilePath: "modules/module2/GitVersion.yml"
-            overrideConfig: |
-              tag-prefix=module2-
+            #overrideConfig: |
+            #  tag-prefix=module2-
       # - name: Run script3
       #   run: |
       #     cd ../../
