--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,8 +123,8 @@ jobs:
         with:
             useConfigFile: true
             configFilePath: "modules/module2/GitVersion.yml"
-            disableCache: true
-            targetPath: "modules/module2"
+            #disableCache: true
+            #targetPath: "modules/module2"
             #overrideConfig: |
             #  tag-prefix=module2-
       # - name: Run script3
