--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,10 +73,12 @@ jobs:
         id: version_step # step id used as reference for output values
         uses: gittools/actions/gitversion/execute@v3.2.1
         with:
-            #useConfigFile: true
+            path: '.'
+            targetPath: 'modules/module1'
+            useConfigFile: true
             #configFilePath: modules/module1/GitVersion.yml
-            overrideConfig: |
-                tag-prefix=module1-
+            #overrideConfig: |
+            #    tag-prefix=module1-
             #arguments: '/showConfig'
             #overrideConfig: |
             #  mode=MainLine
