--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
     #     e.g, 
     outputs:
       output1: ${{ steps.changed-files.outputs.changed_files }}
+      matrix: ${{ steps.get-changed.outputs.matrix }}
     steps:
       - id: checkout-codebase
         uses: actions/checkout@v4
@@ -31,9 +32,19 @@ jobs:
             # Pushes output to $GITHUB_OUTPUT so it can be used in other jobs/steps
             if ${{ github.event_name == 'pull_request' }}; then
                 echo "changed_files=$(git diff --name-only -r HEAD^1 HEAD | xargs)" >> $GITHUB_OUTPUT
+                export CHANGED_MODULES=$( git diff --name-only origin/$GITHUB_BASE_REF ${{ github.event.after }} -- modules | grep -E 'modules/.*/' | cut -d/ -f2 | uniq)
             else
                 echo "changed_files=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | xargs)" >> $GITHUB_OUTPUT
+                # | grep -v 'modules/common/' # allows exclusion of certain folders
+                export CHANGED_MODULES=$( git diff --name-only ${{ github.event.before }} ${{ github.event.after }} -- modules | grep -E 'modules/.*/'  | cut -d/ -f2 | uniq)
             fi
+            # Get all the modules that have a "tests" directory
+            MODULES_WITH_TESTS=$(find modules/ -type d -name "tests" -printf '%h\\n' | cut -d/ -f2 | uniq)
+            # Create our json structure [{"module_name": "source", "has_tests": false|true}]
+            MODULES_JSON=$(echo "$CHANGED_MODULES" | jq -R -s -c --argjson modulesWithTests "$(echo "$MODULES_WITH_TESTS" | jq -R -s 'split("\\n")[:-1]')" 'split("\\n")[:-1] | map({module_name: ., has_tests: (. as $module | $modulesWithTests | any(. == $module))})')
+            # Export the modules as json to the outputs
+            echo "matrix=$(echo "$MODULES_JSON")" >> $GITHUB_OUTPUT
+            echo "json: $MODULES_JSON"
       - name: bash handle module files
         id: bash-modules
         run: |
@@ -48,19 +59,8 @@ jobs:
                 echo "$file was changed"
             done
             echo "changed modules are: ${{ steps.bash-modules.outputs.changed_modules }}"
-      - name: Zip top-level folders with their contents
-        run: |
-            echo ${{ steps.changed-files.outputs.changed_files }} | while read line ; do xargs zip archive.zip $line ; done
-      - name: Extract some files
-        run: |
-            # unzip to test folder (might need to create it?)
-            7z x archive.zip -otest
-            ls
-            cd test
-            ls -la
-            # not for here but just checking tags in the repo
-            git tag -l --sort=-version:refname "module1*"
       - name: Re-checkout repo if not all history is present (this only runs on PR)
+        # required as GitVersion needs a fetch-depth of 0 to work properly
         if: ${{ github.event_name == 'pull_request' }}
         uses: actions/checkout@v4
         with:
@@ -75,13 +75,65 @@ jobs:
         with:
             #useConfigFile: true
             #configFilePath: modules/module1/GitVersion.yml
+            #updateProjectFiles: true
             overrideConfig: |
                 tag-prefix=module1-
             #arguments: '/showConfig'
             #overrideConfig: |
             #  mode=MainLine
-        #with:
-        #  updateProjectFiles: true
+
+      - name: Run script
+        #shell: bash
+        env:
+            SEMVER: ${{ steps.version_step.outputs.MajorMinorPatch }}
+            CHANGED_FILES: ${{ steps.changed-files.outputs.changed_files }}
+        run: |
+            echo "$SEMVER"
+            # wrapped in quotes to make sure it is passed as a space separated string to python
+            python3 .github/scripts/test.py -f "$CHANGED_FILES"
+      - run: |
+            echo "FullSemVer (env.fullSemVer)            : ${{ env.fullSemVer }}"
+            echo "GitVersion_MajorMinorPatch (env.GitVersion_MajorMinorPatch)  : ${{ env.GitVersion_MajorMinorPatch }}"
+        name: Display GitVersion variables (without prefix)
+
+      - name: Determine Module Version
+        id: version_module_step # step id used as reference for output values
+        uses: gittools/actions/gitversion/execute@v3.2.1
+        with:
+            #useConfigFile: true
+            #configFilePath: modules/module2/GitVersion.yml
+            #disableCache: true
+            #targetPath: "modules/module2"
+            overrideConfig: |
+                tag-prefix=module2-
+
+
+
+      # - name: Module1 Version
+      #   id: module1-version
+      #   uses: paulhatch/semantic-version@v5.4.0
+      #   with:
+      #     change_path: "modules/module1"
+      #     tag_prefix: "module1-"
+      # - name: Module2 Version
+      #   id: module2-version
+      #   uses: paulhatch/semantic-version@v5.4.0
+      #   with:
+      #     major_pattern: "(MAJOR-DB)"
+      #     minor_pattern: "(MINOR-DB)"
+      #     change_path: "modules/module2"
+      #     # add suffix to tag e.g, module2-0.0.1-suffix-test-module2
+      #     # namespace: suffix-test-module2
+      #     tag_prefix: "module2-"
+      # - run: |
+      #     echo "module1 version            : ${{ steps.module1-version.outputs.version }}"
+      #     echo "module1 version tag        : ${{ steps.module1-version.outputs.version_tag }}"
+      #     git tag -l --sort=-version:refname "module1*"
+      #     echo "module2 version            : ${{ steps.module2-version.outputs.version }}"
+      #     echo "module2 version tag        : ${{ steps.module2-version.outputs.version_tag }}"
+      #     git tag -l --sort=-version:refname "module2*"
+      #   name: Display semantic versioning variables
+
       # - name: Determine Version
       #   id: version_step # step id used as reference for output values
       #   uses: gittools/actions/gitversion/execute@v3.2.0
@@ -100,61 +152,20 @@ jobs:
       #       gitversion /output buildserver
       #       #echo "$GitVersion_MajorMinorPatch"
       #       #echo $env:GitVersion_MajorMinorPatch
-      - name: Run script
-        #shell: bash
-        env:
-            SEMVER: ${{ steps.version_step.outputs.MajorMinorPatch }}
-            CHANGED_FILES: ${{ steps.changed-files.outputs.changed_files }}
-        run: |
-            echo "$SEMVER"
-            # wrapped in quotes to make sure it is passed as a space separated string to python
-            python3 .github/scripts/test.py -f "$CHANGED_FILES"
-      - run: |
-            echo "FullSemVer (env.fullSemVer)            : ${{ env.fullSemVer }}"
-            echo "GitVersion_MajorMinorPatch (env.GitVersion_MajorMinorPatch)  : ${{ env.GitVersion_MajorMinorPatch }}"
-        name: Display GitVersion variables (without prefix)
 
-      # - name: Run script2
+      # - name: Zip top-level folders with their contents
       #   run: |
-      #     cd modules/module1
-      - name: Determine Module Version
-        id: version_module_step # step id used as reference for output values
-        uses: gittools/actions/gitversion/execute@v3.2.1
-        with:
-            #useConfigFile: true
-            #configFilePath: modules/module2/GitVersion.yml
-            #disableCache: true
-            #targetPath: "modules/module2"
-            overrideConfig: |
-                tag-prefix=module2-
-      # - name: Run script3
+      #       echo ${{ steps.changed-files.outputs.changed_files }} | while read line ; do xargs zip archive.zip $line ; done
+      # - name: Extract some files
       #   run: |
-      #     cd ../../
+      #       # unzip to test folder (might need to create it?)
+      #       7z x archive.zip -otest
+      #       ls
+      #       cd test
+      #       ls -la
+      #       # not for here but just checking tags in the repo
+      #       git tag -l --sort=-version:refname "module1*"
 
-      - name: Module1 Version
-        id: module1-version
-        uses: paulhatch/semantic-version@v5.4.0
-        with:
-          change_path: "modules/module1"
-          tag_prefix: "module1-"
-      - name: Module2 Version
-        id: module2-version
-        uses: paulhatch/semantic-version@v5.4.0
-        with:
-          major_pattern: "(MAJOR-DB)"
-          minor_pattern: "(MINOR-DB)"
-          change_path: "modules/module2"
-          # add suffix to tag e.g, module2-0.0.1-suffix-test-module2
-          # namespace: suffix-test-module2
-          tag_prefix: "module2-"
-      - run: |
-          echo "module1 version            : ${{ steps.module1-version.outputs.version }}"
-          echo "module1 version tag        : ${{ steps.module1-version.outputs.version_tag }}"
-          git tag -l --sort=-version:refname "module1*"
-          echo "module2 version            : ${{ steps.module2-version.outputs.version }}"
-          echo "module2 version tag        : ${{ steps.module2-version.outputs.version_tag }}"
-          git tag -l --sort=-version:refname "module2*"
-        name: Display semantic versioning variables
 
 
         
