--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,7 +94,8 @@ jobs:
             # writes output to Github Env as env.MODULES_JSON
             python3 .github/scripts/test.py -f "$CHANGED_FILES"
             #echo "serverquery=$(python3 .github/scripts/test.py -f \\"$CHANGED_FILES\\" 2>&1)"
-      - run: echo ${{ env.MODULES_JSON }}
+      - run: |
+            echo "Module JSON output (env.MODULES_JSON)            : ${{ env.MODULES_JSON }}"
       - run: |
             echo "FullSemVer (env.fullSemVer)            : ${{ env.fullSemVer }}"
             echo "GitVersion_MajorMinorPatch (env.GitVersion_MajorMinorPatch)  : ${{ env.GitVersion_MajorMinorPatch }}"
