--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,6 +97,7 @@ jobs:
       - run: |
             echo "Module JSON output (env.MODULES_JSON)            : ${{ env.MODULES_JSON }}"
       - run: |
+            echo "Module JSON output (env.MODULES_JSON)            : ${{ env.MODULES_JSON }}"
             echo "FullSemVer (env.fullSemVer)            : ${{ env.fullSemVer }}"
             echo "GitVersion_MajorMinorPatch (env.GitVersion_MajorMinorPatch)  : ${{ env.GitVersion_MajorMinorPatch }}"
         name: Display GitVersion variables (without prefix)
