--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,6 +95,11 @@ jobs:
             # writes output to Github Env as env.MODULES_JSON2
             # works # python3 .github/scripts/test.py -f "$CHANGED_FILES"
             export "MODULES_JSON2=$(python3 .github/scripts/test.py -f \\"$CHANGED_FILES\\" 2>&1)"
+            if [[ $? = 0 ]]; then
+                echo "success"
+            else
+                echo "failure: $?"
+            fi
             echo "MODULES_JSON2: $MODULES_JSON2"
             ##echo "serverquery=$(python3 .github/scripts/test.py -f \\"$CHANGED_FILES\\" 2>&1)"
             #echo "matrix2=$(echo ${{ env.MODULES_JSON }})" >> $GITHUB_OUTPUT
