--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,7 +94,7 @@ jobs:
             SEMVER: ${{ steps.version_step.outputs.MajorMinorPatch }}
             CHANGED_FILES: ${{ steps.changed-files.outputs.changed_files }}
         run: |
-            python3 .github/scripts/test.py -f "$CHANGED_FILES"
+            python3 .github/scripts/test.py -f "$CHANGED_FILES" -o "MODULES_MATRIX"
 
             # echo "$SEMVER"
             # # wrapped in quotes to make sure it is passed as a space separated string to python
@@ -113,7 +113,7 @@ jobs:
       #      echo "Module JSON output (env.MODULES_JSON2)            : ${{ env.MODULES_JSON2 }}"
       - run: |
             echo "Module JSON output (env.MODULES_JSON2)            : ${{ env.MODULES_JSON2 }}"
-            echo "dynamic list          : ${{ steps.run_script.outputs.dynamic_list }}"
+            echo "MODULES_MATRIX          : ${{ steps.run_script.outputs.MODULES_MATRIX }}"
             echo "FullSemVer (env.fullSemVer)            : ${{ env.fullSemVer }}"
             echo "GitVersion_MajorMinorPatch (env.GitVersion_MajorMinorPatch)  : ${{ env.GitVersion_MajorMinorPatch }}"
         name: Display GitVersion variables (without prefix)
