--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,7 +95,7 @@ jobs:
             CHANGED_FILES: ${{ steps.changed-files.outputs.changed_files }}
         run: |
             # causes failure if python script fails
-            set e
+            set -e
             python3 .github/scripts/test.py -f "$CHANGED_FILES" -o "MODULES_MATRIX"
             # check the python script exited ok (a python exception caught will trigger a sys.exit(1))
             if [[ $? = 0 ]]; then
